ingress2/YAML-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myappservice
spec:
  selector:
    <selector_key>: <selector_value>
  ports:
   - protocol: TCP
     port: 8080
